stop images in posts from stretching

--- a/includes/styles/layout.less
+++ b/includes/styles/layout.less
@@ -36,6 +36,12 @@ main {
 	padding-bottom: 10em;
 }
 
+article {
+	img {
+		height: auto;
+	}
+}
+
 footer.main {
 	bottom: 0;
 	display: inline-block;
